<?xml version="1.0"?>
<package format="2">
  <name>differential_drive_tutorial</name>
  <version>0.0.0</version>
  <description>The differential_drive_tutorial package</description>

  <maintainer email="saurabh.gupta1002@gmail.com">Saurabh Gupta</maintainer>
  <author email="saurabh.gupta1002@gmail.com">Saurabh Gupta</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
